--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,13 +10,19 @@
     "registry:build": "shadcn build"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.2.4",
     "@radix-ui/react-slot": "^1.1.2",
+    "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.471.2",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rehype-expressive-code": "^0.40.2",
+    "remark-code-import": "^1.2.0",
     "shadcn": "2.4.0-canary.20",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
